# RAG-Medical-Chatbot

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt
app/: application.py
app/common/: custom_exception.py  logger.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
